# QA_ServiceNow_Assistant

./: .gitignore  README.md  pyproject.toml
docs/adr/: ADR-0013-log-engine-sequencia-implementacao.md  ADR-0014-export-engine-escopo-exportacao-local.md  ADR-0015-application-controller-escopo-composicao.md  ADR-0016-cli-escopo-bootstrap.md
src/qa_servicenow_assistant/bootstrap/: application_controller.py
src/qa_servicenow_assistant/cli/: main.py
tests/integration/automation/: test_automation_engine_integration.py
tests/integration/bootstrap/: test_application_controller_integration.py
tests/integration/browser/: test_playwright_browser_data_collector_integration.py  test_playwright_browser_manager_integration.py
tests/integration/checkpoints/: test_checkpoint_engine_integration.py
tests/integration/cli/: test_main_integration.py
tests/integration/element_recording/: test_element_recorder_integration.py
tests/integration/export/: test_export_engine_integration.py
tests/integration/frame_resolution/: test_frame_resolution_integration.py
tests/integration/knowledge/: test_knowledge_manager_integration.py
tests/integration/logging/: test_log_engine_integration.py
tests/integration/navigation/: test_navigation_engine_integration.py
tests/integration/page_recognition/: test_page_recognition_integration.py
tests/integration/reporting/: test_reporting_engine_integration.py
tests/integration/resolution/: test_selector_resolution_integration.py
tests/integration/retry/: test_retry_engine_integration.py
(+159 files in other folders)
